--- a/app/src/main/res/layout/activity_libros_act.xml
+++ b/app/src/main/res/layout/activity_libros_act.xml
@@ -104,4 +104,17 @@
             android:inputType="textPersonName" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="111dp"
+        android:layout_height="117dp"
+        android:onClick="LibrosMQtt"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.916"
+        app:srcCompat="@drawable/imalibro" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
